--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name='pluto-sample'
 include ':sample'
-include ':pluto'
+include ':pluto-core'
 include ':pluto-no-op'
 include ':pluto-plugin'
 include ':plugin-network'
