--- a/pluto-core/build.gradle
+++ b/pluto-core/build.gradle
@@ -12,7 +12,7 @@ def verCode, verName, verBuild, verNameShort, verPublish
 ext {
     PUBLISH_GROUP_ID = "com.mocklets.pluto"
     PUBLISH_VERSION = verPublish
-    PUBLISH_ARTIFACT_ID = 'plugin'
+    PUBLISH_ARTIFACT_ID = 'core'
 }
 
 android {
@@ -53,7 +53,8 @@ android {
 }
 
 dependencies {
-    api project(path: ':pluto-utilities')
+    api project(path: ':pluto-plugin')
+    implementation project(path: ':pluto-utilities')
     implementation "androidx.core:core-ktx:$androidXCoreVersion"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -63,4 +64,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 }
