--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -41,7 +41,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':pluto')
+    implementation project(path: ':pluto-core')
     implementation project(path: ':plugin-network')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
