--- a/plugin-logger/build.gradle
+++ b/plugin-logger/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation "androidx.core:core-ktx:$androidXCoreVersion"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
 
 task validateChanges {
